err/ulutil.err
Listing '.'...
Listing './bin'...
Compiling './bin/compute_divergence.py'...
Compiling './bin/explode_fasta.py'...
Compiling './bin/fasta2idt.py'...
Compiling './bin/fasta2lenhist.py'...
***   File "./bin/fasta2lenhist.py", line 46
    print "Number of reads: %i" % len(read_lengths)
                              ^
SyntaxError: invalid syntax

Compiling './bin/fasta2tiles.py'...
Compiling './bin/fasta2uniq.py'...
Compiling './bin/fasta_rm_newlines.py'...
Compiling './bin/fasta_sort_by_abundance.py'...
Compiling './bin/generate_otu_table.py'...
***   File "./bin/generate_otu_table.py", line 26
    raise ValueError, "need input and output filenames"
                    ^
SyntaxError: invalid syntax

Compiling './bin/generic_script.py'...
Compiling './bin/idt2fasta.py'...
Compiling './bin/make_timeseries_figures.py'...
***   File "./bin/make_timeseries_figures.py", line 38
    raise ValueError, "Must give a single argument that is a timeseries data file"
                    ^
SyntaxError: invalid syntax

Compiling './bin/qiime_cluster_jobs_LSF.py'...
***   File "./bin/qiime_cluster_jobs_LSF.py", line 34
    raise ValueError, "Didn't get the right command line arguments"
                    ^
SyntaxError: invalid syntax

Compiling './bin/quality_hist.py'...
Compiling './bin/sff2fastq_trimmed.py'...
Compiling './bin/streamgraph_html.py'...
Compiling './bin/timeseries2json.py'...
Compiling './bin/timeseries2streamgraph.py'...
***   File "./bin/timeseries2streamgraph.py", line 35
    raise ValueError, "need input and output names"
                    ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ulutil'...
Compiling './lib/python3.5/site-packages/ulutil/SeqRecordLite.py'...
***   File "./lib/python3.5/site-packages/ulutil/SeqRecordLite.py", line 110
    raise ValueError, "if there is no spanning location...use an annotation?"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ulutil/blat.py'...
***   File "./lib/python3.5/site-packages/ulutil/blat.py", line 31
    if debug: print "Command is:\n%s" % cmd
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ulutil/countdata.py'...
***   File "./lib/python3.5/site-packages/ulutil/countdata.py", line 100
    raise Exception, "p-values not in valid range"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ulutil/daemonize.py'...
***   File "./lib/python3.5/site-packages/ulutil/daemonize.py", line 31
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ulutil/exonerate.py'...
***   File "./lib/python3.5/site-packages/ulutil/exonerate.py", line 231
    print "cmd.query or cmd.target is not set"
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ulutil/lsf.py'...
***   File "./lib/python3.5/site-packages/ulutil/lsf.py", line 68
    raise ValueError, "Job %s failed" % jobID
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ulutil/mplextensions.py'...
***   File "./lib/python3.5/site-packages/ulutil/mplextensions.py", line 233
    raise ValueError, "input x can have no more than 2 dimensions"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ulutil/primers.py'...
***   File "./lib/python3.5/site-packages/ulutil/primers.py", line 32
    raise ValueError, "No primer candidates meet Tm cutoffs"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ulutil/qPCR2melting.py'...
***   File "./lib/python3.5/site-packages/ulutil/qPCR2melting.py", line 31
    raise ValueError, 'Expected line like: "Step,Cycle,Dye,Temp.,..."'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ulutil/qPCR2quantitation.py'...
***   File "./lib/python3.5/site-packages/ulutil/qPCR2quantitation.py", line 31
    raise ValueError, 'Expected line like: "Step,Cycle,Dye,Temp.,..."'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ulutil/sanger.py'...
***   File "./lib/python3.5/site-packages/ulutil/sanger.py", line 50
    raise ValueError, "failed to align right-end of left sequence"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ulutil/scale.py'...
***   File "./lib/python3.5/site-packages/ulutil/scale.py", line 49
    raise ValueError, "outside domain"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ulutil/seqtools.py'...
***   File "./lib/python3.5/site-packages/ulutil/seqtools.py", line 245
    raise ValueError, "didn't find %s in record" % feature_types
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ulutil/statstools.py'...
***   File "./lib/python3.5/site-packages/ulutil/statstools.py", line 55
    if sum(p) != 1.: raise ValueError, "p must sum to 1"
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ulutil-0.1.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
